tests/core/snapshots/routes-param-on-server-directive.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  users: [User]
}

type User {
  name: String
}

schema {
  query: Query
}
