tests/core/snapshots/showcase.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 400,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "No Config URL specified"
      }
    ]
  }
}
