tests/core/snapshots/showcase.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 400,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Invalid Config URL specified"
      }
    ]
  }
}
