tests/core/snapshots/showcase.md_4.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Unexpected GraphQL Request: ExpectedString at character 0"
      }
    ]
  }
}
