tests/core/snapshots/showcase.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(showcase: true) @upstream {
  query: Query
}

type Query {
  not_user: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type User {
  not_id: Int
  not_name: String
}
