tests/core/snapshots/simple-graphql.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 400,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "Unexpected GraphQL Request: invalid type: map, expected a string at line 1 column 9"
      }
    ]
  }
}
